<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Content Provider</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="classe">Classe</string>
    
    <string name="add">Ajouter un nouveau etudiant</string>
    <string name="show">Afficher tous les etudiants</string>
    <string name="delete">Supprimer tous les etudiants</string>
    <string name="deletechamps">Supprimer les champs</string>

</resources>
